# Arakoo.ai

./: .gn  BUILD.gn  BUILDCONFIG.gn  my_test.cpp
src/: client_helpers.cpp  client_helpers.h  main.cpp  main.h
tests/: main_test.cpp
